--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,5 @@
-max_width = 89
-reorder_imports = true
+comment_width = 100
+edition = "2018"
+merge_imports = true
+use_field_init_shorthand = true
+wrap_comments = true
