--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ name = "ag"
 path = "src/main.rs"
 
 [dependencies]
+percent-encoding = "1.0"
 term_size = "0.3"
 ansi_term = "0.11"
 bytes = "0.4"
