--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,16 @@ path = "src/main.rs"
 [dependencies]
 percent-encoding = "2.1"
 term_size = "0.3"
-ansi_term = "0.11"
-bytes = "0.4"
-tokio = "0.1"
+ansi_term = "0.12"
+bytes = "0.5"
 failure = "0.1"
-futures = "0.1"
-actix = "0.7"
-actix-web = { version = "0.7", features = ["ssl"] }
+
+futures = "0.3"
+futures-util = "0.3"
+actix-rt = "1.0"
+awc = { version = "1.0", features = ["openssl"] }
 
 [dependencies.clap]
-version = "2.32"
+version = "2.33"
 default-features = false
 features = [ "suggestions", "color" ]
