--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,19 @@ dist: xenial
 
 matrix:
   include:
-    # Stable channel.
+    # Build on linux
     - os: linux
-      rust: stable
-      env: TARGET=x86_64-unknown-linux-gnu
+      rust: nightly
+      env:
+        - TARGET=x86_64-unknown-linux-gnu
+        - DEPLOY=true
 
+    # Build on osx
     - os: osx
-      rust: stable
-      env: TARGET=x86_64-apple-darwin
+      rust: nightly
+      env:
+        - TARGET=x86_64-apple-darwin
+        - DEPLOY=true
 
     # Code formatting check
     - os: linux
@@ -21,8 +26,9 @@ matrix:
         - cargo install --debug --force rustfmt-nightly
       script: cargo fmt -- --check
 
+    # Test benchmark
     - os: linux
-      rust: stable
+      rust: nightly
       install: cargo build
       script: bash ci/benchmark.bash
 
@@ -75,7 +81,7 @@ deploy:
     # deploy only if we push a tag
     tags: true
     # deploy only on stable channel that has TARGET env variable sets
-    condition: $TRAVIS_RUST_VERSION = stable && $TARGET != ""
+    condition: $DEPLOY = true && $TARGET != ""
 
 notifications:
   email:
