--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,19 +19,18 @@ edition = "2018"
 name = "ag"
 path = "src/main.rs"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-percent-encoding = "2.1"
+bytes = "0.5"
+isahc = { version = "0.9", features = ["cookies"] }
+futures = "0.3"
+async-std = { version = "1", features = ["unstable"] }
+thiserror = "1.0"
 term_size = "0.3"
 ansi_term = "0.12"
-bytes = "0.5"
-failure = "0.1"
-
-futures = "0.3"
-futures-util = "0.3"
-actix-rt = "1.0"
-awc = { version = "1.0", features = ["openssl"] }
-
-[dependencies.clap]
-version = "2.33"
-default-features = false
-features = [ "suggestions", "color" ]
+openssl = "0.10"
+clap = "2"
+percent-encoding = "2"
+m3u8-rs = "1"
+url = "2"
