--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ matrix:
         - TARGET=x86_64-unknown-linux-gnu
         - TASK=fmt-check
       # skip the global install step
-      # install:
-      #   - cargo install --debug --force rustfmt-nightly
+      install:
+        - rustup component add rustfmt --toolchain nightly
       script: cargo fmt -- --check
 
     # Test benchmark
