--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ matrix:
         - TASK=fmt-check
       # skip the global install step
       install:
-        - rustup component add rustfmt --toolchain nightly
+        - rustup component add rustfmt --toolchain nightly-x86_64-unknown-linux-gnu
       script: cargo fmt -- --check
 
     # Test benchmark
