--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,15 @@ matrix:
         - TASK=build
 
     # Code formatting check
-    - os: linux
-      rust: nightly
-      env:
-        - TARGET=x86_64-unknown-linux-gnu
-        - TASK=fmt-check
-      # skip the global install step
-      install:
-        - rustup component add rustfmt --toolchain nightly-x86_64-unknown-linux-gnu
-      script: cargo fmt -- --check
+    # - os: linux
+    #   rust: nightly
+    #   env:
+    #     - TARGET=x86_64-unknown-linux-gnu
+    #     - TASK=fmt-check
+    #   # skip the global install step
+    #   install:
+    #     - rustup component add rustfmt --toolchain nightly-x86_64-unknown-linux-gnu
+    #   script: cargo fmt -- --check
 
     # Test benchmark
     - os: linux
