--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aget-rs"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["PeterDing <dfhayst@gmail.com>"]
 homepage = "https://github.com/PeterDing/aget-rs"
 description="Aget-rs - Fast Asynchronous Downloader with Rust 🦀"
@@ -44,6 +44,14 @@ ansi_term = "0.12"
 percent-encoding = "2"
 bytes = "0.5"
 clap = "2"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"]}
+dirs = "2.0"
 
 # for m3u8
 m3u8-rs = "1"
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = 'z'
