--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ build: false
 
 test_script:
   - cargo test --target %TARGET% --verbose
-  - cargo run --target %TARGET% -- "https://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg"
+  - cargo run --target %TARGET% -- "http://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg"
   - ps: Remove-Item –path .\googlechrome.dmg
 
 before_deploy:
