--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,12 @@ dirs = "4.0"
 # for m3u8
 m3u8-rs = "4"
 
+# for tracing
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-appender = "0.2"
+
 [profile.release]
 codegen-units = 1
 lto = true
