--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ on:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   create-release:
     name: create-release
@@ -42,6 +45,7 @@ jobs:
           # See: https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32167/highlight/true#M1027
           echo "AG_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
           echo "version is: ${{ env.AG_VERSION }}"
+
       - name: Create GitHub release
         id: release
         uses: actions/create-release@v1
@@ -67,7 +71,7 @@ jobs:
       RUST_BACKTRACE: 1
     strategy:
       matrix:
-        build: [linux, linux-arm, macos, win-msvc, win-gnu, win32-msvc]
+        build: [linux, linux-arm, linux-aarch64, macos, macos-aarch64, win-msvc, win-gnu, win32-msvc]
         include:
           - build: linux
             os: ubuntu-18.04
@@ -77,10 +81,18 @@ jobs:
             os: ubuntu-18.04
             rust: nightly
             target: arm-unknown-linux-gnueabihf
+          - build: linux-aarch64
+            os: ubuntu-18.04
+            rust: nightly
+            target: aarch64-unknown-linux-gnu
           - build: macos
             os: macos-latest
             rust: nightly
             target: x86_64-apple-darwin
+          - build: macos-aarch64
+            os: macos-latest
+            rust: nightly
+            target: aarch64-apple-darwin
           - build: win-msvc
             os: windows-2019
             rust: nightly
@@ -117,16 +129,30 @@ jobs:
           echo "CARGO=cross" >> $GITHUB_ENV
           echo "TARGET_FLAGS=--target ${{ matrix.target }}" >> $GITHUB_ENV
           echo "TARGET_DIR=./target/${{ matrix.target }}" >> $GITHUB_ENV
+
       - name: Show command used for Cargo
         run: |
           echo "cargo command is: ${{ env.CARGO }}"
           echo "target flag is: ${{ env.TARGET_FLAGS }}"
           echo "target dir is: ${{ env.TARGET_DIR }}"
+
+      - name: Build aarch64-unknown-linux-gnu
+        if: matrix.build == 'linux-aarch64'
+        run: |
+          rustup target add aarch64-unknown-linux-gnu
+          sudo apt-get update
+          sudo apt-get install -yq gcc-aarch64-linux-gnu
+          export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=/usr/bin/aarch64-linux-gnu-gcc
+          cargo build --verbose --release ${{ env.TARGET_FLAGS }}
+          echo "- Strip release binary (linux-aarch64)"
+          aarch64-linux-gnu-strip "target/${{ matrix.target }}/release/ag"
+
       - name: Build release binary
+        if: matrix.build != 'linux-aarch64'
         run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
 
       - name: Strip release binary (linux and macos)
-        if: matrix.build == 'linux' || matrix.build == 'macos'
+        if: matrix.build == 'linux' || matrix.build == 'macos' || matrix.build == 'macos-aarch64'
         run: strip "target/${{ matrix.target }}/release/ag"
 
       - name: Strip release binary (arm)
@@ -153,6 +179,7 @@ jobs:
             tar czf "$staging.tar.gz" "$staging"
             echo "ASSET=$staging.tar.gz" >> $GITHUB_ENV
           fi
+
       - name: Upload release archive
         uses: actions/upload-release-asset@v1.0.1
         env:
