--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aget-rs"
-version = "0.4.1"
+version = "0.5.0"
 authors = ["PeterDing <dfhayst@gmail.com>"]
 homepage = "https://github.com/PeterDing/aget-rs"
 description="Aget-rs - Fast Asynchronous Downloader with Rust 🦀"
@@ -33,7 +33,7 @@ actix-rt = "2.9"
 # for http
 http = "1.0"
 url = "2.5"
-reqwest = { version = "0.11", features = ["default", "stream", "gzip", "brotli", "deflate"] }
+reqwest = { version = "0.11", features = ["rustls-tls", "stream", "gzip", "brotli", "deflate"], default-features = false }
 
 # for errors
 thiserror = "1.0"
@@ -65,6 +65,12 @@ time = { version = "0.3", features = ["formatting", "macros"] }
 rand = "0.8"
 
 [profile.release]
+opt-level = 3
+debug = "none"
+strip = "symbols"
+debug-assertions = false
+overflow-checks = false
+lto = "fat"
+panic = "abort"
+incremental = false
 codegen-units = 1
-lto = true
-opt-level = 'z'
