--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,12 @@ path = "src/main.rs"
 [dependencies]
 # for async
 futures = "0.3"
-actix-rt = "2.9"
+actix-rt = "2.10"
 
 # for http
-http = "1.0"
+http = "1.1"
 url = "2.5"
-reqwest = { version = "0.11", features = ["rustls-tls", "stream", "gzip", "brotli", "deflate"], default-features = false }
+reqwest = { version = "0.12", features = ["rustls-tls", "stream", "gzip", "brotli", "deflate"], default-features = false }
 
 # for errors
 thiserror = "1.0"
@@ -41,6 +41,7 @@ thiserror = "1.0"
 # for crypto
 aes = "0.8"
 cbc = { version = "0.1", features = ["alloc", "block-padding"] }
+md-5 = "0.10"
 
 # utilities
 term_size = "0.3"
@@ -53,7 +54,10 @@ serde = { version = "1.0", features = ["derive"] }
 dirs = "5.0"
 
 # for m3u8
-m3u8-rs = "5"
+m3u8-rs = "6"
+
+# for torrent
+librqbit = { git = "https://github.com/ikatson/rqbit.git", branch = "main" }
 
 # for tracing
 tracing = "0.1"
