--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - if: contains(matrix.target, 'x86')
+        uses: ilammy/setup-nasm@v1
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -47,6 +50,18 @@ jobs:
         run: rustup target add aarch64-apple-darwin
 
       - uses: Swatinem/rust-cache@v1
+
+      - name: Install dependencies for aws-lc-rs
+        shell: bash
+        run: |
+          if [ "${{ matrix.os }}" = "windows-latest" ]; then
+            echo 'LIBCLANG_PATH="C:\Program Files\LLVM\bin"' >> $GITHUB_ENV
+            echo 'AWS_LC_SYS_PREBUILT_NASM=1' >> $GITHUB_ENV
+            cargo install --force --locked bindgen-cli
+          elif [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            sudo apt-get install -y build-essential cmake golang libclang1 libclang-dev
+            cargo install --force --locked bindgen-cli
+          fi
 
       - name: Build
         if: matrix.target != 'aarch64-apple-darwin'
